[package]
name = "wikisubscriberscraper"
version = "0.1.0"
authors = ["Mikko Jaakkola <mikko.la.jaakkola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features=['json'] }
tokio = { version = "1", features = ["full"] }
# serde = {version = "1.0", features = ["derive"] }
# serde_json = "1.0"
lazy_static = "1.4"
regex = "1"
clap = "2.33"