[package]
name = "wikisubscriberscraper"
version = "0.1.0"
authors = ["Mikko Jaakkola <mikko.la.jaakkola@gmail.com>"]
edition = "2018"


[dependencies]
surf = "2.2"
smol = "1.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
regex = "1"
clap = "2.33"
scraper = "0.12"
log = "0.4"
env_logger = "0.8"
thiserror = "1.0"
